# MonGone

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  test-data.yaml
docs/: docs.md  index.html
mongone/: cli.py  clusters.py  http.py  invoices.py  plans.py  projects.py
mongone/cmd/: commands.py
mongone/core/: config.py  data_loader.py  report_generator.py
mongone/cost/: prediction.py
mongone/data/: clusters.py  enviroments.py  invoices.py  projects.py
mongone/optimization/: execute.py  plans.py
mongone/templates/: report.html
mongone/utils/: helpers.py  http.py  rendering.py
